refactor(exhibition): extract helper methods to improve readability and reuse logic
Signed-off-by: Mauricio Mucci <57639887+MauricioMucci@users.noreply.github.com>